# polyglot

./: .gitignore  CMakeLists.txt  Makefile  QUICKSTART.md  README.md  TODO.md  Windows文件关联安装指南.md  build.bat  build.sh  package.pgm  package_manager_demo.pg  run_tests.bat  run_tests.sh  symbol_mapping.json  test_ast.pg  test_builtin_print.pg  test_chinese.文达  test_complex.pg  test_english.pg  test_integrated_package_manager.sh  test_new_syntax.pg  test_semantic_advanced.pg  一键安装文达编译器.bat  卸载文达文件关联.bat  学生管理系统.文达  安装文达文件关联.bat  文字ＲＰＧ游戏.文达  文达  文达.bat  构建达文编译器.cmd  注册文达文件类型.reg  注册文达文件类型_动态.reg  测试报告.md  生成文达文件关联.bat
.github/: pull_request_template.md
.github/workflows/: ci.yml
ai_tests/: COMPILER_TESTS.md  Makefile  README.md  REORGANIZATION_REPORT.md  player_demo.文达  simple_test  simple_test.pg  test.文达  test_english.pg  test_lexer.cpp  tests-b616dab.md  variables_demo.文达  中文化完成报告.md  测试记录-b616dab.md
ai_tests/basic_syntax/: test_correct_syntax.pg  test_english.pg  test_simple.pg  test_simple_syntax.pg
ai_tests/examples/: test_builtin_print.pg  test_complex.pg  test_new_syntax_success.pg
ai_tests/semantic_tests/: test_parser.pg  test_semantic_advanced.pg  test_semantic_error.pg
ai_tests/测试/: 中文语法测试.文达  学生管理系统.文达  文字ＲＰＧ游戏.文达  测试打印函数.文达
compiler/: ast.h  ast_interpreter.cpp  ast_interpreter.h  codegen.cpp  codegen.h  error.cpp  error.h  error.rs  lexer.cpp  lexer.h  main.cpp  main.rs  package_manager.h  parser.cpp  parser.h  semantic.cpp  semantic.h  symbol_config.cpp  symbol_config.h  symbol_mapping.json  token_types.h
examples/: package.pgm  remote_dependencies_example.pg
stdlib/: README.md
stdlib/collections/: array.pg
stdlib/io/: console.pg  console.文达
stdlib/math/: math.pg
tests/golden/: run_golden.py
tests/golden/cases/hello_en/: input.pg
tests/golden/cases/hello_zh/: input.文达
tests/golden/cases/中文文件名_书名号_返回/: input.文达
tests/golden/cases/中文文件名_全角括号与运算符/: input.文达
tests/golden/ok/: print_en_basic.pg  print_zh_basic.文达  types_primitives.文达  中文文件名_书名号_返回.文达  变量声明_已知类型无需问号.文达  循环_占位语法.文达  打印_中文基础.文达  模式匹配_占位语法.文达  模式匹配_骨架.文达
tests/golden/report/: hello_zh.diff.txt  summary.json  中文文件名_ASCII内容.diff.txt  中文文件名_书名号_返回.diff.txt
tools/cli/: main.cpp
tools/pgm/: package_manager.pg
tutorial/: README.md  polyglot完整符号语法示例.md  polyglot符号语法设计.md  循环引用可视化图解.md  循环引用解决方案示例.md
tutorial/tutorial1/: README.md  basic_example.pg  error_example.pg  hello.pg  memory_safety_implementation.md  simple_function_test.pg
tutorial/tutorial2/: README.md  datatypes.pg
tutorial/tutorial3/: README.md  control_flow.pg
tutorial/tutorial4/: README.md  advanced_example.pg  objects.pg
tutorial/示例1/: 中文测试.文达  中文类型系统.md  中文编程示例.文达  全角符号中文编程示例.文达  全角符号对照表.md  内存安全实现机制.md  编译器全角模式支持.md  编译器符号模式检测机制.md  说明文档.md
人工智能——自动化测试/: 测试记录-AIGPT5:b616dab.md
人工智能——自动化测试/金样测试/ok/: 循环_骨架.文达
人工智能协作/: 任务分配_GPT5.md  任务分配_Sonnet.md  多AI协作开发路线图与任务拆解.md  多人工智能协作规则与流程.md  工作决定_Windows兼容职责划分_2025-08-21.md  工作决定_分支开发规范_2025-08-21.md  日报_Sonnet_2025-08-21.md  日报_Sonnet_2025-08-22.md  日报_Sonnet_2025-08-23.md  每日工作日报_GPT5_2025-08-21.md  沟通说明_工作决定触发机制_2025-08-21.md
人工智能协作/工作决定历史/: 工作决定_CI修复进展_2025-08-21.md
人工智能协作/汇报历史/: 工作汇报_CI修复进展_2025-08-21.md  工作汇报_Windows兼容性协同_2025-08-21.md  工作汇报_金样测试目录迁移_2025-08-21.md
文档/: .codemaker.codebase.md  INTEGRATED_PACKAGE_MANAGER.md  PGM快速开始.md  PROGRESS.md  SYNTAX_UPDATE_v1.0.0.md  v1.0.1-alpha.md  使用说明.md  开发计划.md  快速入门.md  测试报告.md  英文使用说明.md  语法更新_v1.0.0.md  集成包管理器.md  项目进度.md
文档/协作规范/: 协作规范.md
自动化测试/金样测试/: 运行金样测试.py
自动化测试/金样测试/ok/: 打印_全角示例.文达  条件_占位语法.文达  条件_骨架.文达  模式匹配_占位语法.文达
自动化测试/金样测试/报告/: Unicode_多语言_全角.diff.txt  hello_en.diff.txt  中文文件名_ASCII内容_示例.diff.txt  中文文件名_书名号_返回.diff.txt  中文文件名_全角括号与运算符.diff.txt  中文问候.diff.txt  中文问候.error.txt  声明语法_海象_多语种.diff.txt  字符串_转义_基础.diff.txt  数字字面量_f32_f64.diff.txt  数组_Map_基础.diff.txt  汇总.json  英文问候.diff.txt
自动化测试/金样测试/用例/Unicode_多语言_全角/: 期望.输出  输入.文达
自动化测试/金样测试/用例/中文书名号与返回符号/: 输入.文达
自动化测试/金样测试/用例/中文文件名_ASCII内容_示例/: 期望.错误
自动化测试/金样测试/用例/中文文件名_ASCII内容_错误/: 期望.错误  输入.文达
自动化测试/金样测试/用例/中文文件名_书名号_返回/: 期望.输出  输入.文达
自动化测试/金样测试/用例/中文文件名_全角括号与运算符/: 期望.输出  输入.文达
自动化测试/金样测试/用例/中文问候/: 期望.输出  输入.文达
自动化测试/金样测试/用例/中英混排输出/: 输入.文达
自动化测试/金样测试/用例/全角括号与运算符/: 输入.文达
自动化测试/金样测试/用例/声明语法_海象_多语种/: 期望.输出  输入.文达
自动化测试/金样测试/用例/字符串_转义_基础/: 期望.输出  输入.文达
自动化测试/金样测试/用例/数字后缀与精度/: 期望.输出  输入.文达
自动化测试/金样测试/用例/数字字面量_f32_f64/: 期望.输出  输入.文达
自动化测试/金样测试/用例/数字字面量与精度/: 输入.文达
自动化测试/金样测试/用例/数组_Map_基础/: 期望.输出  输入.文达
自动化测试/金样测试/用例/更多浮点格式/: 期望.输出  输入.文达
自动化测试/金样测试/用例/浮点后缀_f32/: 输入.文达
自动化测试/金样测试/用例/浮点后缀_f64/: 输入.文达
自动化测试/金样测试/用例/海象与累加/: 输入.文达
自动化测试/金样测试/用例/空字符串与换行/: 输入.文达
自动化测试/金样测试/用例/空白与制表符/: 输入.文达
自动化测试/金样测试/用例/类型注解与赋值/: 期望.输出  输入.文达
自动化测试/金样测试/用例/表情与特殊符号/: 输入.文达
自动化测试/金样测试/用例/负数与零/: 输入.文达
自动化测试/金样测试/用例/转义与Unicode/: 输入.文达
